[package]
name = "ftd_sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ftd_sys"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
pyo3-asyncio = { version = "0.14", features = ["tokio-runtime"] }
fpm = { git = "https://github.com/FifthTry/fpm", rev = "9dd38c2" }
# fpm = { path = "../../fpm" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"

# This is added to resolve
# Error: "failed to run custom build command for `openssl-sys v0.9.72`"
# for linux github workflow in CI.yml
# Worflow link: https://github.com/FifthTry/ftd-py/runs/5696299223?check_suite_focus=true
openssl = { version = "0.10", features = ["vendored"] }